fix overflow in list

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ input {
     background-color: #76c7ad;
 }
 
+
 .list {
     background-color: #5a3e2b;
     color: #ffebb3;
@@ -94,7 +95,7 @@ input {
 .list ul {
     list-style: none;
     width: 80%;
-    overflow: scroll;
+    overflow: hidden;
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
